# OpenGL-2D-game

./: .gitignore  CMakeLists.txt  GameValues.h  README.md  TextRenderer.cpp  TextRenderer.h  main.cpp
Dependencies/Freetype/lib/: freetyped.lib
Dependencies/Lib/: freetype.lib
Sprites/: BackgroundLayer.cpp  BackgroundLayer.h  Fish.cpp  Fish.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  Trash.cpp  Trash.h
shaders/: text.vert  texture.vert
